# lagtest-old

./: README.md  lag-test  plot-lag.py  plot_data.py  time_model.py
app/: lag-test  lag-test-gtk  lag-test-gtk.ui  lag_plot_window.py  plot_data.py
firmware/lag-adder/: Makefile.leonardo  lag-adder.ino
firmware/lagtestino/: Makefile  Makefile.uno  README.rst  lagtest_datatypes.h  lagtestino.ino
lag-test-firmware/: Makefile
lagtestino/: Makefile  README.rst  lagtest_datatypes.h  lagtestino.ino
qlagtest/: .gitignore  CMakeLists.txt
qlagtest/examples/QThreadTest/: mainwindow.cpp  mainwindow.h  qThreadTest.pro  workingthread.cpp  workingthread.h
qlagtest/examples/qSerialComm/: lagtestserialportcomm.cpp  lagtestserialportcomm.h  main.cpp  mainapp.cpp  mainapp.h  qSerialComm.pro
qlagtest/installer/: setup.iss
qlagtest/src/: flashingbackground.cpp  flashingbackground.h  flashingbgqpaint.cpp  flashingbgqpaint.h  lagtest.cpp  lagtest.h  lagtestserialportcomm.cpp  lagtestserialportcomm.h  latencymodel.cpp  latencymodel.cpp.autosave  latencymodel.h  main.cpp  openglwindow.cpp  openglwindow.h  ringbuffer.hpp  serialporthandler.cpp  serialporthandler.h  timemodel.cpp  timemodel.h  window.cpp  window.h
website/: _config.yml  index.md  lagtestino.md  synchronization.md  upload.sh
website/_includes/: above-content.html  below-content.html
website/_layouts/: default.html
website/assets/img/: lagtestino-fritzing.xcf
website/assets/other/: lagtest.fzz
